--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,7 +4,8 @@
 <th:block th:insert="fragments/navbar :: header"></th:block>
 <body>
 <div class="container main">
-
+    <img class="homeLogo" src="/img/logoWithBackground.png" alt="">
+    <h1 class="homeText">Handbola komandu reģistrācijas un spēļu protokola sistēma</h1>
 </div>
 <th:block th:insert="fragments/script :: scripts"></th:block>
 </body>
