--- a/src/main/resources/templates/organizer/tournament.html
+++ b/src/main/resources/templates/organizer/tournament.html
@@ -5,11 +5,24 @@
 <body>
 <div class="container main">
     <div class="container info">
-        <h4 th:text="${tournament.name}"></h4>
-        <div>
-            <h6>Komandas</h6>
-            <a class="btn btn-info float-right" th:href="@{'/organizer/tournaments/'+${tournament.id}+'/editTeams'}">Pievienot/Noņemt
-                komandas</a>
+        <div class="row">
+            <div class="col">
+                <h4 th:text="${tournament.name}"></h4>
+            </div>
+            <div class="col">
+                <a class="btn btn-dark float-right" th:href="@{'/organizer/tournaments/'+${tournament.id}+'/delete'}">Dzēst
+                    turnīru</a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <h6>Komandas</h6>
+            </div>
+            <div class="col">
+                <a class="btn btn-success float-right"
+                   th:href="@{'/organizer/tournaments/'+${tournament.id}+'/editTeams'}">Pievienot/Noņemt
+                    komandas</a>
+            </div>
         </div>
         <table class="table table-striped table-bordered">
             <thead>
@@ -25,34 +38,44 @@
         </table>
 
         <hr>
-        <h6>Spēļu kalendārs</h6>
-        <a class="btn btn-info float-right" th:href="@{'/organizer/tournaments/'+${tournament.id}+'/createGame'}">Pievienot
-            spēli</a>
-        <table class="table table-striped table-bordered">
-            <thead>
-            <tr>
-                <th>Mājas komanda</th>
-                <th>Viesu komanda</th>
-                <th>Datums</th>
-                <th>Rezultāts</th>
-                <th></th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="game:${tournament.games}">
-                <td th:text="${game.homeTeam.name}"></td>
-                <td th:text="${game.awayTeam.name}"></td>
-                <td th:text="${#dates.format(game.date, 'dd-MM-yyyy HH:mm')}"></td>
-                <td th:text="${game.homeTeamGoals + ' : ' + game.awayTeamGoals}"></td>
-                <td>
-                    <a class="btn btn-warning"
-                       th:href="@{'/organizer/tournaments/'+${tournament.id}+'/game/'+${game.id}+'/edit'}">Labot</a>
-                    <a class="btn btn-danger"
-                       th:href="@{'/organizer/tournaments/'+${tournament.id}+'/game/'+${game.id}+'/delete'}">Dzēst</a>
-                </td>
-            </tr>
-            </tbody>
-        </table>
+        <div class="row">
+            <div class="col">
+                <h6>Spēļu kalendārs</h6>
+            </div>
+            <div class="col">
+                <a class="btn btn-success float-right"
+                   th:href="@{'/organizer/tournaments/'+${tournament.id}+'/createGame'}">Pievienot
+                    spēli</a>
+            </div>
+        </div>
+
+        <div class="tableScroll">
+            <table class="table table-striped table-bordered">
+                <thead>
+                <tr>
+                    <th>Mājas komanda</th>
+                    <th>Viesu komanda</th>
+                    <th>Datums</th>
+                    <th>Rezultāts</th>
+                    <th></th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="game:${tournament.games}">
+                    <td th:text="${game.homeTeam.name}"></td>
+                    <td th:text="${game.awayTeam.name}"></td>
+                    <td th:text="${#dates.format(game.date, 'dd-MM-yyyy HH:mm')}"></td>
+                    <td th:text="${game.homeTeamGoals + ' : ' + game.awayTeamGoals}"></td>
+                    <td>
+                        <a class="btn btn-primary"
+                           th:href="@{'/organizer/tournaments/'+${tournament.id}+'/game/'+${game.id}+'/edit'}">Labot</a>
+                        <a class="btn btn-dark"
+                           th:href="@{'/organizer/tournaments/'+${tournament.id}+'/game/'+${game.id}+'/delete'}">Dzēst</a>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
 </div>
 <th:block th:insert="fragments/script :: scripts"></th:block>
