--- a/src/main/resources/templates/player.html
+++ b/src/main/resources/templates/player.html
@@ -49,7 +49,7 @@
                 </table>
             </div>
         </div>
-        <a class="btn btn-info" th:href="@{'/teams/'+${teamId}}">Atpakaļ pie komandas</a>
+        <a class="btn btn-secondary" th:href="@{'/teams/'+${teamId}}">Atpakaļ pie komandas</a>
     </div>
 </div>
 <th:block th:insert="fragments/script :: scripts"></th:block>
