--- a/src/main/resources/templates/team.html
+++ b/src/main/resources/templates/team.html
@@ -22,7 +22,7 @@
                 <td th:text="${player.surname}"></td>
                 <td th:text="${player.position}"></td>
                 <td>
-                    <a class="btn btn-info" th:href="@{'/teams/'+${team.id}+'/player/'+${player.id}}">Spēlētāja
+                    <a class="btn btn-secondary" th:href="@{'/teams/'+${team.id}+'/player/'+${player.id}}">Spēlētāja
                         informācija</a>
                 </td>
             </tr>
