--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -5,9 +5,11 @@
 </head>
 <body>
 <header class="sticky-top" th:fragment="header">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+    <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
         <div class="container">
-            <a class="navbar-brand" href="/">Logo</a>
+            <a class="navbar-brand" href="/">
+                <img class="logo" src="/img/logo.png" alt="Logo">
+            </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -37,7 +39,7 @@
                 </div>
                 <div sec:authorize="isAuthenticated()">
                     <a href="/profile" class="btn btn-secondary my-2 my-sm-0">Profils</a>
-                    <a href="/logout" class="btn btn-danger my-2 my-sm-0">Atslēgties</a>
+                    <a href="/logout" class="btn btn-success my-2 my-sm-0">Atslēgties</a>
                 </div>
             </div>
         </div>
