--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,6 +5,7 @@
 <body>
 <div class="login">
     <form role="form" th:action="@{/login}" th:method="post">
+        <img class="formLogo" src="/img/logo.png" alt="">
         <h2>Pieslēgties</h2>
         <div class="form-group"><input class="form-control" name="username" type="email" placeholder="E-pasts"></div>
         <div class="form-group">
