--- a/src/main/resources/templates/organizer/createTournament.html
+++ b/src/main/resources/templates/organizer/createTournament.html
@@ -4,16 +4,18 @@
 <th:block th:insert="fragments/navbar :: header"></th:block>
 <body>
 <div class="container main">
-    <form role="form" th:action="@{/organizer/createTournament}" th:object="${tournament}" th:method="post">
-        <h2>Izveidot turnīru</h2>
-        <div class="form-group">
-            <input class="form-control" th:field="*{name}" name="name" type="text" placeholder="Turnīra nosaukums">
-            <p class="pError bg-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></p>
-        </div>
-        <div class="form-group">
-            <button class="btn btn-success btn-block" type="submit">Izveidot turnīru</button>
-        </div>
-    </form>
+    <div class="container info">
+        <form role="form" th:action="@{/organizer/createTournament}" th:object="${tournament}" th:method="post">
+            <h2>Izveidot turnīru</h2>
+            <div class="form-group">
+                <input class="form-control" th:field="*{name}" name="name" type="text" placeholder="Turnīra nosaukums">
+                <p class="pError bg-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></p>
+            </div>
+            <div class="form-group">
+                <button class="btn btn-success btn-block" type="submit">Izveidot turnīru</button>
+            </div>
+        </form>
+    </div>
 </div>
 <th:block th:insert="fragments/script :: scripts"></th:block>
 </body>
