--- a/src/main/resources/templates/organizer/tournaments.html
+++ b/src/main/resources/templates/organizer/tournaments.html
@@ -4,23 +4,27 @@
 <th:block th:insert="fragments/navbar :: header"></th:block>
 <body>
 <div class="container main">
-    <h2>Turnīri</h2>
-    <table id="tournaments" class="table table-striped table-bordered">
-        <thead>
-        <tr>
-            <th>Turnīra nosaukums</th>
-            <th></th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="tournament : ${tournaments}">
-            <td th:text="${tournament.name}"></td>
-            <td>
-                <a class="btn btn-info" th:href="@{'/organizer/tournaments/'+${tournament.id}}">Apskatīt informāciju</a>
-            </td>
-        </tr>
-        </tbody>
-    </table>
+    <div class="container info">
+        <h2>Turnīri</h2>
+        <table id="tournaments" class="table table-striped table-bordered" th:unless="${#sets.isEmpty(tournaments)}">
+            <thead>
+            <tr>
+                <th>Turnīra nosaukums</th>
+                <th></th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="tournament : ${tournaments}">
+                <td th:text="${tournament.name}"></td>
+                <td>
+                    <a class="btn btn-secondary" th:href="@{'/organizer/tournaments/'+${tournament.id}}">Apskatīt
+                        informāciju</a>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+        <h3 th:if="${#sets.isEmpty(tournaments)}">Pašlaik Jums nav izveidotu turnīru!</h3>
+    </div>
 </div>
 <th:block th:insert="fragments/script :: scripts"></th:block>
 </body>
