--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -5,6 +5,7 @@
 <body>
 <div class="login">
     <form role="form" th:action="@{/register}" th:object="${user}" th:method="post">
+        <img class="formLogo" src="/img/logo.png" alt="">
         <h2>Reģistrēties</h2>
         <div class="form-group">
             <input class="form-control" th:field="*{name}" name="name" type="text" placeholder="Vārds">
