--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -9,6 +9,7 @@ body {
     background-attachment: fixed;
 }
 
+/*navbar styling STARTS HERE*/
 .logo {
     height: 40px;
     width: 40px;
@@ -26,6 +27,135 @@ body {
     color: white;
 }
 
+/*navbar styling ENDS HERE*/
+
+/*homepage Styling STARTS HERE*/
+.homeLogo{
+    display: block;
+    margin: 0 auto;
+}
+
+.homeText{
+    text-align: center;
+    color: white;
+    text-shadow: 0 0 10px white;
+    -webkit-text-stroke: 2px black;
+    font-size: 3rem;
+}
+
+/*homepage Styling ENDS HERE*/
+
+/*login/registration Styling STARTS HERE*/
+.login {
+    width: 300px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 6%;
+    background: white;
+    padding: 20px;
+    border-radius: 5px;
+    text-align: center;
+    border: 1px solid black;
+}
+
+a:hover {
+    text-decoration: none;
+}
+
+.login a {
+    color: darkgray;
+}
+
+.login a:hover {
+    text-decoration: none;
+    color: black;
+}
+
+/*login/registration Styling ENDS HERE*/
+
+/*form styling STARTS HERE*/
+.pError {
+    color: white;
+    border-radius: 2px;
+    margin-top: 5px;
+    font-size: smaller;
+    padding: 5px 10px 5px 10px;
+}
+
+.tableScroll {
+    overflow-x: auto;
+}
+
+.formLogo {
+    height: 100px;
+    width: 100px;
+}
+
+.form-control:focus {
+    box-shadow: 0 0 0 0.2rem #B4201C80;
+    border-color: #B4201C80;
+}
+
+input[type=checkbox].isPlayingGame {
+    transform: scale(1.5);
+}
+
+/*form styling ENDS HERE*/
+
+.row {
+    padding-bottom: 10px;
+}
+
+.container.main {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    background: rgba(0, 0, 0, 0.6);
+    min-height: 91vh;
+}
+
+.container.info {
+    background: white;
+    padding: 20px;
+    border-radius: 8px;
+}
+
+.card {
+    padding-top: 20px;
+    text-align: center;
+}
+
+.row.cards a {
+    color: #989d99;
+}
+
+.row.cards a:hover {
+    color: #383836;
+}
+
+.card:hover {
+    background: #989d99;
+}
+
+.table {
+    background: white;
+    text-align: center;
+}
+
+li {
+    text-align: left;
+}
+
+#addPlayer {
+    margin-bottom: 20px;
+}
+
+.errorImage {
+    display: block;
+    margin: 0 auto;
+    width: 800px;
+}
+
+/*Button styling STARTS HERE*/
 .btn-success {
     color: white;
     background-color: #b4201c;
@@ -160,117 +290,10 @@ body {
     border-color: #000000;
     box-shadow: 0 0 0 0.2rem #00000080;
 }
-.homeLogo{
-    display: block;
-    margin: 0 auto;
-}
 
-.homeText{
-    text-align: center;
-    color: white;
-    text-shadow: 0 0 10px white;
-    -webkit-text-stroke: 2px black;
-    font-size: 3rem;
-}
+/*Button styling ENDS HERE*/
 
-.formLogo {
-    height: 100px;
-    width: 100px;
-}
-
-.form-control:focus {
-    box-shadow: 0 0 0 0.2rem #B4201C80;
-    border-color: #B4201C80;
-}
-
-.login {
-    width: 300px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 6%;
-    background: white;
-    padding: 20px;
-    border-radius: 5px;
-    text-align: center;
-    border: 1px solid black;
-}
-
-a:hover {
-    text-decoration: none;
-}
-
-.login a {
-    color: darkgray;
-}
-
-.login a:hover {
-    text-decoration: none;
-    color: black;
-}
-
-.pError {
-    color: white;
-    border-radius: 2px;
-    margin-top: 5px;
-    font-size: smaller;
-    padding: 5px 10px 5px 10px;
-}
-
-.tableScroll{
-    overflow-x:auto;
-}
-
-.row{
-    padding-bottom: 10px;
-}
-
-.container.main {
-    padding-top: 20px;
-    padding-bottom: 20px;
-    background: rgba(0, 0, 0, 0.6);
-    min-height: 91vh;
-}
-
-.container.info {
-    background: white;
-    padding: 20px;
-    border-radius: 8px;
-}
-
-.card {
-    padding-top: 20px;
-    text-align: center;
-}
-
-.row.cards a {
-    color: #989d99;
-}
-
-.row.cards a:hover {
-    color: #383836;
-}
-
-.card:hover {
-    background: #989d99;
-}
-
-.table {
-    background: white;
-    text-align: center;
-}
-
-li {
-    text-align: left;
-}
-
-#addPlayer {
-    margin-bottom: 20px;
-}
-
-input[type=checkbox].isPlayingGame {
-    transform: scale(1.5);
-}
-
+/*Background moving balls STARTS HERE*/
 .circles {
     z-index: -10;
     position: fixed;
@@ -383,3 +406,5 @@ input[type=checkbox].isPlayingGame {
         transform: translateY(-1000px) rotate(720deg);
     }
 }
+
+/*Background moving balls ENDS HERE*/
