added that manager can edit team

--- a/src/main/resources/templates/manager/team.html
+++ b/src/main/resources/templates/manager/team.html
@@ -11,6 +11,7 @@
             </div>
             <div class="col">
                 <a class="btn btn-dark float-right" th:href="@{'/manager/team/delete'}">Dzēst komandu</a>
+                <a class="btn btn-primary float-right" th:href="@{'/manager/team/edit'}">Labot komandu</a>
             </div>
         </div>
         <h6>Spēlētāji</h6>
