added that organizer can edit tournament

--- a/src/main/resources/templates/organizer/tournament.html
+++ b/src/main/resources/templates/organizer/tournament.html
@@ -12,6 +12,8 @@
             <div class="col">
                 <a class="btn btn-dark float-right" th:href="@{'/organizer/tournaments/'+${tournament.id}+'/delete'}">Dzēst
                     turnīru</a>
+                <a class="btn btn-primary float-right" th:href="@{'/organizer/tournaments/'+${tournament.id}+'/edit'}">Labot
+                    turnīru</a>
             </div>
         </div>
         <div class="row">
