--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -406,5 +406,14 @@ li {
         transform: translateY(-1000px) rotate(720deg);
     }
 }
-
 /*Background moving balls ENDS HERE*/
+@media screen and (max-width: 400px) {
+    .homeLogo {
+        width: 300px;
+    }
+
+    .homeText {
+        -webkit-text-stroke: 1px black;
+        font-size: 2.3rem;
+    }
+}
